# fake-news-detection-using-audio-with-sonic-sleuth-model

be-misinformasi-audio/: README.md  main.py  pyproject.toml
be-misinformasi-audio/app/: __init__.py  audio_features.py  config.py  model_service.py  schemas.py
fe-misinformasi-audio/: components.json  index.html  package.json
fe-misinformasi-audio/src/: App.tsx  index.css
fe-misinformasi-audio/src/components/: theme-switcher.tsx
fe-misinformasi-audio/src/features/prediction/: constants.ts  types.ts  utils.ts
fe-misinformasi-audio/src/features/prediction/components/: BackendStatusIndicator.tsx  HeroUploadSection.tsx  InfoHint.tsx  PreviewCard.tsx  ProbabilityBars.tsx  ResultsSection.tsx  SettingsCard.tsx  Spinner.tsx  SummaryRing.tsx
